Intersect Knife: Segmentation fault or incorrect behavior #63787

Closed
opened 2019-04-21 23:27:54 +02:00 by kloliks · 11 comments

System Information
Operating system: win10
Graphics card: gtx1060

Blender Version
Broken: 2.79, master; 2.80, master

Short description of error
Segmentation fault or incorrect behavior

Exact steps for others to reproduce the error

New plane
One vertical loop cut
Individual insert faces

0001.jpg

Select one inner rectangle
Shift + D
Rotate 90 degrees
Horizontally scaled slightly

0002.jpg

Two inner rectangle added to selection
Shift + H
Ctrl + F
Select: Intersect (Knife)

0003.jpg

.blend file
untitled.blend

**System Information** Operating system: win10 Graphics card: gtx1060 **Blender Version** Broken: 2.79, master; 2.80, master **Short description of error** Segmentation fault or incorrect behavior **Exact steps for others to reproduce the error** ``` New plane One vertical loop cut Individual insert faces ``` ![0001.jpg](https://archive.blender.org/developer/F6965100/0001.jpg) ``` Select one inner rectangle Shift + D Rotate 90 degrees Horizontally scaled slightly ``` ![0002.jpg](https://archive.blender.org/developer/F6965103/0002.jpg) ``` Two inner rectangle added to selection Shift + H Ctrl + F Select: Intersect (Knife) ``` ![0003.jpg](https://archive.blender.org/developer/F6965102/0003.jpg) **.blend file** [untitled.blend](https://archive.blender.org/developer/F6965104/untitled.blend)
Author

Added subscriber: @kloliks

Added subscriber: @kloliks

#74441 was marked as duplicate of this issue

#74441 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-04-25 14:29:13 +02:00
BLI_assert failed: /home/zed/prog/blender/source/blender/bmesh/tools/bmesh_intersect.c:1265, BM_mesh_intersect(), at '(_splice_ls_index) + (1) <= _splice_ls_totalloc'

Thread 1 "blender" received signal SIGABRT, Aborted.
0x00007ffff3a6a61b in raise () from /lib64/libc.so.6
(gdb) bt
- 0  0x00007ffff3a6a61b in raise () from /lib64/libc.so.6
- 1  0x00007ffff3a53535 in abort () from /lib64/libc.so.6
#2  0x0000555558ea7ee8 in BM_mesh_intersect (bm=0x7fffe8bed008, looptris=0x7fffd5f67808, looptris_tot=22, test_fn=0x5555589c0461 <bm_face_isect_pair>, user_data=0x0,
    use_self=false, use_separate=false, use_dissolve=true, use_island_connect=true, use_partial_connect=true, use_edge_tag=true, boolean_mode=-1, eps=9.99999997e-07)
    at /home/zed/prog/blender/source/blender/bmesh/tools/bmesh_intersect.c:1265
- 3  0x00005555589c143e in edbm_intersect_exec (C=0x7fffeec58188, op=0x7fffde406788) at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_intersect.c:193
- 4  0x000055555821abdd in wm_operator_invoke (C=0x7fffeec58188, ot=0x7fffe99732c8, event=0x7fffe896cc88, properties=0x7fffffffd960, reports=0x0, poll_only=false,
    use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1421
#5  0x000055555821b29c in wm_operator_call_internal (C=0x7fffeec58188, ot=0x7fffe99732c8, properties=0x7fffffffd960, reports=0x0, context=1, poll_only=false,
    event=0x7fffe896cc88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1623
#6  0x000055555821b4bf in WM_operator_name_call_ptr (C=0x7fffeec58188, ot=0x7fffe99732c8, context=1, properties=0x7fffffffd960)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1671
- 7  0x000055555881989e in ui_apply_but_funcs_after (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:789
- 8  0x0000555558831f05 in ui_popup_handler (C=0x7fffeec58188, event=0x7fffd58fcc08, userdata=0x7fffd5979588)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10198
#9  0x0000555558218865 in wm_handler_ui_call (C=0x7fffeec58188, handler=0x7fffd59f7448, event=0x7fffd58fcc08, always_pass=0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:608
#10 0x000055555821d8a7 in wm_handlers_do_intern (C=0x7fffeec58188, event=0x7fffd58fcc08, handlers=0x7fffd1d32298)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2573
#11 0x000055555821e282 in wm_handlers_do (C=0x7fffeec58188, event=0x7fffd58fcc08, handlers=0x7fffd1d32298)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2804
- 12 0x000055555821f4f6 in wm_event_do_handlers (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3172
- 13 0x00005555582130f0 in WM_main (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418
#14 0x0000555557b802c4 in main (argc=1, argv=0x7fffffffe098) at /home/zed/prog/blender/source/creator/creator.c:500
``` BLI_assert failed: /home/zed/prog/blender/source/blender/bmesh/tools/bmesh_intersect.c:1265, BM_mesh_intersect(), at '(_splice_ls_index) + (1) <= _splice_ls_totalloc' Thread 1 "blender" received signal SIGABRT, Aborted. 0x00007ffff3a6a61b in raise () from /lib64/libc.so.6 (gdb) bt - 0 0x00007ffff3a6a61b in raise () from /lib64/libc.so.6 - 1 0x00007ffff3a53535 in abort () from /lib64/libc.so.6 #2 0x0000555558ea7ee8 in BM_mesh_intersect (bm=0x7fffe8bed008, looptris=0x7fffd5f67808, looptris_tot=22, test_fn=0x5555589c0461 <bm_face_isect_pair>, user_data=0x0, use_self=false, use_separate=false, use_dissolve=true, use_island_connect=true, use_partial_connect=true, use_edge_tag=true, boolean_mode=-1, eps=9.99999997e-07) at /home/zed/prog/blender/source/blender/bmesh/tools/bmesh_intersect.c:1265 - 3 0x00005555589c143e in edbm_intersect_exec (C=0x7fffeec58188, op=0x7fffde406788) at /home/zed/prog/blender/source/blender/editors/mesh/editmesh_intersect.c:193 - 4 0x000055555821abdd in wm_operator_invoke (C=0x7fffeec58188, ot=0x7fffe99732c8, event=0x7fffe896cc88, properties=0x7fffffffd960, reports=0x0, poll_only=false, use_last_properties=true) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1421 #5 0x000055555821b29c in wm_operator_call_internal (C=0x7fffeec58188, ot=0x7fffe99732c8, properties=0x7fffffffd960, reports=0x0, context=1, poll_only=false, event=0x7fffe896cc88) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1623 #6 0x000055555821b4bf in WM_operator_name_call_ptr (C=0x7fffeec58188, ot=0x7fffe99732c8, context=1, properties=0x7fffffffd960) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:1671 - 7 0x000055555881989e in ui_apply_but_funcs_after (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:789 - 8 0x0000555558831f05 in ui_popup_handler (C=0x7fffeec58188, event=0x7fffd58fcc08, userdata=0x7fffd5979588) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10198 #9 0x0000555558218865 in wm_handler_ui_call (C=0x7fffeec58188, handler=0x7fffd59f7448, event=0x7fffd58fcc08, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:608 #10 0x000055555821d8a7 in wm_handlers_do_intern (C=0x7fffeec58188, event=0x7fffd58fcc08, handlers=0x7fffd1d32298) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2573 #11 0x000055555821e282 in wm_handlers_do (C=0x7fffeec58188, event=0x7fffd58fcc08, handlers=0x7fffd1d32298) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2804 - 12 0x000055555821f4f6 in wm_event_do_handlers (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3172 - 13 0x00005555582130f0 in WM_main (C=0x7fffeec58188) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:418 #14 0x0000555557b802c4 in main (argc=1, argv=0x7fffffffe098) at /home/zed/prog/blender/source/creator/creator.c:500 ```
Philipp Oeser changed title from Segmentation fault or incorrect behavior with `Intersect (Knife)` to Intersect Knife: Segmentation fault or incorrect behavior 2019-09-03 11:52:25 +02:00
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:34:37 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can confirm the crash.
If not on the first try, on the second.

I can confirm the crash. If not on the first try, on the second.

I investigated the file and was able to identify more precisely the problem.
Basically the error occurs when a "non-existent" edge of a selected face intersects an unselected edge:
image.png

Here is the file:
intersect_knife_bug.blend

I investigated the file and was able to identify more precisely the problem. Basically the error occurs when a "non-existent" edge of a selected face intersects an unselected edge: ![image.png](https://archive.blender.org/developer/F8329423/image.png) Here is the file: [intersect_knife_bug.blend](https://archive.blender.org/developer/F8329427/intersect_knife_bug.blend)

Added subscriber: @Dragosh

Added subscriber: @Dragosh
Campbell Barton self-assigned this 2020-04-23 15:45:59 +02:00

This issue was referenced by d428cca124

This issue was referenced by d428cca124264cdb6e68d0676c74d80c7a303a7a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63787
No description provided.