Fix T63787: Knife intersect crashes